# genconf

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
example/: values.yaml
example/conf.d/: worker-default.conf  worker-fixed-name.conf  worker-shared-prefix.conf
example/template/: template-fixed-log-name.conf  template-fixed-log-prefix-no-stdout-maxbytes.conf  template-fixed-log-prefix.conf  template-main.conf
src/: app.rs  cli.rs  config.rs  main.rs  render.rs  writer.rs
tests/: cli.rs
