[package]
name = "genconf"
version = "1.1.1"
edition = "2024"
description = "CLI utility for generating config files from YAML-driven templates"
license = "MIT"
readme = "README.md"
repository = "https://github.com/unixoff/genconf"
homepage = "https://github.com/unixoff/genconf"
keywords = ["cli", "config", "template", "yaml", "generator"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
